# rust-test-cli-service

./: .env  .env.example  Cargo.toml  README.md
src/: config.rs  constants.rs  errors.rs  main.rs  scan.rs  types.rs
